前進！前進！中華民国まんせー！

--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -137,6 +137,10 @@ HROM_DEF: "神聖ローマニア軍団国"
 HBUL: "モエシア＝トラキア文化再生地域"
 HBUL_DEF: "モエシア＝トラキア文化再生地域" 
 
+NKCHI: "南京国民政府"
+NKCHI_DEF: "南京国民政府"
+
 GER_Schwarze_Front: "黒色戦線"
+GER_Schwarze_FrontL_DEF: "黒色戦線"
 
  
