--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -1,65 +1,93 @@
 ﻿l_japanese:
- VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! 勝利点 = §Y$POINTS$§!"
- VICTORY_POINTS_3962:0 "函館"
- VICTORY_POINTS_7532:0 "小樽"
- VICTORY_POINTS_9859:0 "八戸"
- VICTORY_POINTS_9807:0 "盛岡"
- VICTORY_POINTS_4067:0 "鶴岡"
- VICTORY_POINTS_13297:0 "会津若松"
- VICTORY_POINTS_13292:0 "水戸"
- VICTORY_POINTS_1113:0 "宇都宮"
- VICTORY_POINTS_13291:0 "前橋"
- VICTORY_POINTS_13290:0 "高崎"
- VICTORY_POINTS_9998:0 "横浜"
- VICTORY_POINTS_12007:0 "上越"
- VICTORY_POINTS_10015:0 "松本"
- VICTORY_POINTS_12097:0 "浜松"
- VICTORY_POINTS_13307:0 "豊橋"
- VICTORY_POINTS_13345:0 "四日市"
- VICTORY_POINTS_4054:0 "津"
- VICTORY_POINTS_4142:0 "大津"
- VICTORY_POINTS_13347:0 "草津"
- VICTORY_POINTS_13350:0 "舞鶴"
- VICTORY_POINTS_13339:0 "さかい"
- VICTORY_POINTS_13278:0 "神戸"
- VICTORY_POINTS_12031:0 "姫路"
- VICTORY_POINTS_9985:0 "豊岡"
- VICTORY_POINTS_4094:0 "高松"
- VICTORY_POINTS_4179:0 "松山"
- VICTORY_POINTS_11946:0 "呉"
- VICTORY_POINTS_7145:0 "松江"
- VICTORY_POINTS_11985:0 "下関"
- VICTORY_POINTS_1158:0 "佐世保"
- VICTORY_POINTS_1025:0 "北九州"
+ VICTORY_POINTS_TOOLTIP: "§G$NAME$§! 勝利点 = §Y$POINTS$§!"
+ VICTORY_POINTS_3962: "函館"
+ VICTORY_POINTS_7532: "小樽"
+ VICTORY_POINTS_9859: "八戸"
+ VICTORY_POINTS_9807: "盛岡"
+ VICTORY_POINTS_4067: "鶴岡"
+ VICTORY_POINTS_13297: "会津若松"
+ VICTORY_POINTS_13292: "水戸"
+ VICTORY_POINTS_1113: "宇都宮"
+ VICTORY_POINTS_13291: "前橋"
+ VICTORY_POINTS_13290: "高崎"
+ VICTORY_POINTS_9998: "横浜"
+ VICTORY_POINTS_12007: "上越"
+ VICTORY_POINTS_10015: "松本"
+ VICTORY_POINTS_12097: "浜松"
+ VICTORY_POINTS_13307: "豊橋"
+ VICTORY_POINTS_13345: "四日市"
+ VICTORY_POINTS_4054: "津"
+ VICTORY_POINTS_4142: "大津"
+ VICTORY_POINTS_13347: "草津"
+ VICTORY_POINTS_13350: "舞鶴"
+ VICTORY_POINTS_13339: "さかい"
+ VICTORY_POINTS_13278: "神戸"
+ VICTORY_POINTS_12031: "姫路"
+ VICTORY_POINTS_9985: "豊岡"
+ VICTORY_POINTS_4094: "高松"
+ VICTORY_POINTS_4179: "松山"
+ VICTORY_POINTS_11946: "呉"
+ VICTORY_POINTS_7145:"松江"
+ VICTORY_POINTS_11985: "下関"
+ VICTORY_POINTS_1158: "佐世保"
+ VICTORY_POINTS_1025: "北九州"
  #Vietnam
- VICTORY_POINTS_9948:0 "ドンダン"
- VICTORY_POINTS_12319:0 "ラオカイ"
- VICTORY_POINTS_4119:0 "ハイフォン"
- VICTORY_POINTS_1185:0 "ナムディン"
- VICTORY_POINTS_4397:0 "ヴィン"
- VICTORY_POINTS_4379:0 "フエ"
- VICTORY_POINTS_10309:0 "ダナン"
- VICTORY_POINTS_4405:0 "トゥイホア"
- VICTORY_POINTS_4401:0 "ホーチミン"
- VICTORY_POINTS_12133:0 "カントー"
- VICTORY_POINTS_10177:0 "バットンボーン"
- VICTORY_POINTS_4539:0 "サワンナケート"
+ VICTORY_POINTS_9948: "ドンダン"
+ VICTORY_POINTS_12319: "ラオカイ"
+ VICTORY_POINTS_4119: "ハイフォン"
+ VICTORY_POINTS_1185: "ナムディン"
+ VICTORY_POINTS_4397: "ヴィン"
+ VICTORY_POINTS_4379: "フエ"
+ VICTORY_POINTS_10309: "ダナン"
+ VICTORY_POINTS_4405: "トゥイホア"
+ VICTORY_POINTS_4401: "ホーチミン"
+ VICTORY_POINTS_10232: "ファンティエト"
+ VICTORY_POINTS_12133: "カントー"
+ VICTORY_POINTS_4341: "カマウ"
+ VICTORY_POINTS_10177: "バットンボーン"
+ VICTORY_POINTS_4302: "シエムリエプ"
+ VICTORY_POINTS_4539: "サワンナケート"
  #USA
- VICTORY_POINTS_4518:0 "フレズノ"
- VICTORY_POINTS_9786:0 "ドーヴァー"
- VICTORY_POINTS_3733:0 "ロチェスター"
- VICTORY_POINTS_9673:0 "オールバニ"
- VICTORY_POINTS_9850:0 "ハートフォード"
- VICTORY_POINTS_11830:0 "プロヴィデンス"
- VICTORY_POINTS_4445:0 "モントピリア"
- VICTORY_POINTS_733:0 "コンコード"
+ VICTORY_POINTS_4518: "フレズノ"
+ VICTORY_POINTS_9786: "ドーヴァー"
+ VICTORY_POINTS_3733: "ロチェスター"
+ VICTORY_POINTS_9673: "オールバニ"
+ VICTORY_POINTS_9850: "ハートフォード"
+ VICTORY_POINTS_11830: "プロヴィデンス"
+ VICTORY_POINTS_4445: "モントピリア"
+ VICTORY_POINTS_733: "コンコード"
  #KOR
- VICTORY_POINTS_1081:0 "デグ"
- VICTORY_POINTS_10110:0 "光州"
- VICTORY_POINTS_7204:0 "太田"
- VICTORY_POINTS_1148:0 "江陵"
- VICTORY_POINTS_7221:0 "仁川"
- VICTORY_POINTS_12040:0 "開城"
- VICTORY_POINTS_11835:0 "新義州"
- VICTORY_POINTS_6928:0 "ハムフン"
- VICTORY_POINTS_898:0 "清津"
+ VICTORY_POINTS_1081: "デグ"
+ VICTORY_POINTS_10110: "光州"
+ VICTORY_POINTS_7204: "太田"
+ VICTORY_POINTS_1148: "江陵"
+ VICTORY_POINTS_7221: "仁川"
+ VICTORY_POINTS_12040: "開城"
+ VICTORY_POINTS_11835: "新義州"
+ VICTORY_POINTS_6928: "ハムフン"
+ VICTORY_POINTS_898: "清津"
+#CHINE
+ VICTORY_POINTS_9938: "汕頭"
+ VICTORY_POINTS_9970: "韶関"
+ VICTORY_POINTS_7152: "仏山"
+ VICTORY_POINTS_1131: "茂名"
+ VICTORY_POINTS_11986: "泉州"
+ VICTORY_POINTS_1055: "温州"
+ VICTORY_POINTS_7025: "徐州"
+ VICTORY_POINTS_1121: "ホワイアン"
+ VICTORY_POINTS_1029: "連雲港"
+ VICTORY_POINTS_11931: "洛陽"
+ VICTORY_POINTS_10474: "シャンヤン"
+ VICTORY_POINTS_4295: "漢中"
+ VICTORY_POINTS_10733: "宝鶏"
+ VICTORY_POINTS_1933: "天水"
+ VICTORY_POINTS_1200: "煙台"
+ VICTORY_POINTS_4190: "石家荘"
+ VICTORY_POINTS_1148: "ハンタン"
+ VICTORY_POINTS_3900: "秦皇島"
+ VICTORY_POINTS_900: "唐山"
+
+
+
+
+
