--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6420,3 +6420,35 @@
  BKN_DEF: "武漢"
  BKN_ADJ: "武漢"
 
+ SAN_fascism: "山東帝国"
+ SAN_fascism_DEF: "山東帝国"
+ SAN_democratic: "山東"
+ SAN_democratic_DEF: "山東"
+ SAN_neutrality: "山東"
+ SAN_neutrality_DEF: "山東"
+ SAN_communism: "山東社会主義共和国"
+ SAN_communism_DEF: "山東社会主義共和国"
+ SAN_fascism_ADJ: "山東"
+ SAN_democratic_ADJ: "山東"
+ SAN_neutrality_ADJ: "山東"
+ SAN_communism_ADJ: "山東"
+ SAN: "山東"
+ SAN_DEF: "山東"
+ SAN_ADJ: "山東"
+
+ EXC_fascism: "広東"
+ EXC_fascism_DEF: "広東"
+ EXC_democratic: "広東"
+ EXC_democratic_DEF: "広東"
+ EXC_neutrality: "広東"
+ EXC_neutrality_DEF: "広東"
+ EXC_communism: "広東社会主義共和国"
+ EXC_communism_DEF: "広東社会主義共和国"
+ EXC_fascism_ADJ: "広東"
+ EXC_democratic_ADJ: "広東"
+ EXC_neutrality_ADJ: "広東"
+ EXC_communism_ADJ: "広東"
+ EXC: "広東"
+ EXC_DEF: "広東"
+ EXC_ADJ: "広東"
+
