--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -290,7 +290,7 @@
  VICTORY_POINTS_3992: "南昌"
  VICTORY_POINTS_4196: "福州"
  VICTORY_POINTS_4504: "貴陽"
- VICTORY_POINTS_4619: "漢口"
+ VICTORY_POINTS_4619: "武漢"
  VICTORY_POINTS_4925: "成都"
  VICTORY_POINTS_7071: "厦門"
  VICTORY_POINTS_7097: "長沙"
