暫定武漢だと文句言われるため

--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -57,14 +57,14 @@
  VICTORY_POINTS_4445: "モントピリア"
  VICTORY_POINTS_733: "コンコード"
  #KOR
- VICTORY_POINTS_1081: "デグ"
+ VICTORY_POINTS_1081: "大邱"
  VICTORY_POINTS_10110: "光州"
  VICTORY_POINTS_7204: "太田"
  VICTORY_POINTS_1148: "江陵"
  VICTORY_POINTS_7221: "仁川"
  VICTORY_POINTS_12040: "開城"
  VICTORY_POINTS_11835: "新義州"
- VICTORY_POINTS_6928: "ハムフン"
+ VICTORY_POINTS_6928: "咸興"
  VICTORY_POINTS_898: "清津"
 #CHINE
  VICTORY_POINTS_9938: "汕頭"
@@ -74,16 +74,16 @@
  VICTORY_POINTS_11986: "泉州"
  VICTORY_POINTS_1055: "温州"
  VICTORY_POINTS_7025: "徐州"
- VICTORY_POINTS_1121: "ホワイアン"
+ VICTORY_POINTS_1121: "淮安"
  VICTORY_POINTS_1029: "連雲港"
  VICTORY_POINTS_11931: "洛陽"
- VICTORY_POINTS_10474: "シャンヤン"
+ VICTORY_POINTS_10474: "襄陽"
  VICTORY_POINTS_4295: "漢中"
  VICTORY_POINTS_10733: "宝鶏"
  VICTORY_POINTS_1933: "天水"
  VICTORY_POINTS_1200: "煙台"
  VICTORY_POINTS_4190: "石家荘"
- VICTORY_POINTS_1148: "ハンタン"
+ VICTORY_POINTS_1169: "甘鄲"
  VICTORY_POINTS_3900: "秦皇島"
  VICTORY_POINTS_900: "唐山"
 
