--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -936,8 +936,8 @@
  MON_fascism_DEF: "新モンゴル帝国"
  MON_democratic: "モンゴル議会共和国"
  MON_democratic_DEF: "モンゴル議会共和国"
- MON_neutrality: "大モンゴル国"
- MON_neutrality_DEF: "大モンゴル国"
+ MON_neutrality: "モンゴル"
+ MON_neutrality_DEF: "モンゴル"
  MON_communism: "モンゴル"
  MON_communism_DEF: "モンゴル"
  MON_fascism_ADJ: "モンゴル"
@@ -4783,9 +4783,9 @@
  SIE_socialism: "Sierra Leone"
  SIE_socialism_ADJ: "Sierra Leonean"
  SIE_socialism_DEF: "Socialist Republic of Sierra Leone"
- SIK_socialism: "Sinkiang"
- SIK_socialism_ADJ: "Sinkiang"
- SIK_socialism_DEF: "Socialist Republic of Sinkiang"
+ SIK_socialism: "東トルキスタン社民国"
+ SIK_socialism_ADJ: "東トルキスタン社民国"
+ SIK_socialism_DEF: "東トルキスタン社民国"
  SIL_socialism: "Silesia"
  SIL_socialism_ADJ: "Silesian"
  SIL_socialism_DEF: "Socialist Republic of Silesia"
@@ -6408,8 +6408,8 @@
  BKN_fascism_DEF: "武漢人民国"
  BKN_democratic: "武漢共和国"
  BKN_democratic_DEF: "武漢共和国"
- BKN_neutrality: "武漢"
- BKN_neutrality_DEF: "武漢"
+ BKN_neutrality: "蜜金愚陀無"
+ BKN_neutrality_DEF: "蜜金愚陀無"
  BKN_communism: "武漢社会主義共和国"
  BKN_communism_DEF: "武漢社会主義共和国"
  BKN_fascism_ADJ: "武漢"
