--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -284,7 +284,7 @@
  STATE_283:0 "甘粛"
  STATE_284:0 "北島"
  STATE_285:0 "ニューサウスウェールズ"
- STATE_286:0 "インドシナ南部"
+ STATE_286:0 "ホーチミン"
  STATE_287:0 "タクラマカン"
  STATE_288:0 "ビルマ"
  STATE_289:0 "シャム"
@@ -1029,7 +1029,7 @@
  STATE_1027:0 "バタンバン"
  STATE_1028:0 "ストゥントレン"
  STATE_1029:0 "西北部"
- STATE_1030:0 "安南"
+ STATE_1030:0 "中圻"
  STATE_1031:0 "ロサンゼルス"
  STATE_1032:0 "サンフランシスコ"
  STATE_1033:0 "カリフォルニア南部"
