--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6404,21 +6404,21 @@
  IRC_DEF: "イロコイ連邦"
  IRC_ADJ: "イロコイ"
 
- HBE_fascism: "湖北"
- HBE_fascism_DEF: "湖北"
- HBE_democratic: "湖北共和国"
- HBE_democratic_DEF: "湖北共和国"
- HBE_neutrality: "湖北"
- HBE_neutrality_DEF: "湖北"
- HBE_communism: "湖北社会主義共和国"
- HBE_communism_DEF: "湖北社会主義共和国"
- HBE_fascism_ADJ: "湖北"
- HBE_democratic_ADJ: "湖北"
- HBE_neutrality_ADJ: "湖北"
- HBE_communism_ADJ: "湖北"
- HBE: "湖北"
- HBE_DEF: "湖北"
- HBE_ADJ: "湖北"
+ BKN_fascism: "武漢人民国"
+ BKN_fascism_DEF: "武漢人民国"
+ BKN_democratic: "武漢共和国"
+ BKN_democratic_DEF: "武漢共和国"
+ BKN_neutrality: "蜜金愚陀無"
+ BKN_neutrality_DEF: "蜜金愚陀無"
+ BKN_communism: "武漢社会主義共和国"
+ BKN_communism_DEF: "武漢社会主義共和国"
+ BKN_fascism_ADJ: "武漢"
+ BKN_democratic_ADJ: "武漢"
+ BKN_neutrality_ADJ: "武漢"
+ BKN_communism_ADJ: "武漢"
+ BKN: "武漢"
+ BKN_DEF: "武漢"
+ BKN_ADJ: "武漢"
 
  SAN_fascism: "山東帝国"
  SAN_fascism_DEF: "山東帝国"
