--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -27,7 +27,7 @@
  VICTORY_POINTS_4094: "高松"
  VICTORY_POINTS_4179: "松山"
  VICTORY_POINTS_11946: "呉"
- VICTORY_POINTS_7145:"松江"
+ VICTORY_POINTS_7145: "松江"
  VICTORY_POINTS_11985: "下関"
  VICTORY_POINTS_1158: "佐世保"
  VICTORY_POINTS_1025: "北九州"
@@ -86,6 +86,7 @@
  VICTORY_POINTS_1169: "甘鄲"
  VICTORY_POINTS_3900: "秦皇島"
  VICTORY_POINTS_900: "唐山"
+ VICTORY_POINTS_4619: "武昌"
 
 
 
