(南)チロルチョコ

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -37,7 +37,7 @@
  STATE_36:0 "フリースラント"
  STATE_37:0 "シェラン"
  STATE_38:0 "イェヴレボリ"
- STATE_39:0 "アルト・アディジェ"
+ STATE_39:0 "南チロル"
  STATE_40:0 "バルナウル"
  STATE_41:0 "マドリード"
  STATE_42:0 "モーゼルラント"
