--- a/localisation/TR_events/japanese/TR_FRA_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_FRA_l_japanese.yml
@@ -49,7 +49,7 @@ TR_FRA_SPsibaku.9.a: "奴らを攻撃しなければならない！"
 TR_FRA_SPsibaku.9.a: "ここが引き際かもしれない..."
 
 
-TR_FRA.1.t: "失敗..."
+TR_FRA.1.t: "石油"
 TR_FRA.1.d: "カタルーニャの自治政府どもは我々の寛大な要求を拒否した！"
 TR_FRA.1.a: "奴らを攻撃しなければならない！"
 TR_FRA.1.a: "ここが引き際かもしれない..."
