--- a/localisation/TR_events/japanese/TR_MANchine_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_MANchine_events_l_japanese.yml
@@ -5,25 +5,32 @@
 
  TR_bomb_MAN: "張作霖が爆殺された"
 
- TR_FJN.1.t: "クーデター！"
- TR_FJN.1.d: "国民党が政府を掌握した！"
- TR_FJN.1.a: "前進！前進！"
-
  TR_MAN.2.t: "内戦！"
  TR_MAN.2.d: "[RUS.GetName]からの独立を狙う[POL.GetName]は我々に対して支援を要請している。"
  TR_MAN.2.a: "我々の政権はもう終わってしまうのか？"
- TR_MAN.2.b: "中国共産党でプレイ"
- TR_MAN.2.c: "山西軍閥でプレイ"
+ TR_MAN.2.b: "山西軍閥でプレイ"
 
  TR_MAN.3.t: "和平交渉？"
  TR_MAN.3.d: "驚くべきことに南京の国民党政府から講和の打診が来た。日本の介入を恐れているのだろうか？"
  TR_MAN.3.a: "講和を結ぶ"
  TR_MAN.3.b: "徹底抗戦する。奴らに土地を明け渡すわけにはいかない"
 
+ TR_FJN.1.t: "クーデター！"
+ TR_FJN.1.d: "国民党が政府を掌握した！"
+ TR_FJN.1.a: "前進！前進！"
+
  TR_FJN.2.t: "奉天派との講和"
  TR_FJN.2.d: "和平を結びました"
  TR_FJN.2.a: "了解"
  TR_FJN.2.b: "山東軍閥でプレイ"
+
+ TR_PRC.1.t: "革命！"
+ TR_PRC.1.d: "共産党が武漢市を掌握した！"
+ TR_PRC.1.a: "前進！前進！"
+
+ TR_PRC.2.t: "奉天派との講和"
+ TR_PRC.2.d: "和平を結びました"
+ TR_PRC.2.a: "了解"
 
  TR_MAN_news.1.t: "張作霖が爆殺される！"
  TR_MAN_news.1.d: "張作霖が爆殺されちゃった..."
