--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -766,8 +766,8 @@
  PRC_democratic_DEF: "中華共和国"
  PRC_neutrality: "中華民国"
  PRC_neutrality_DEF: "中華民国"
- PRC_communism: "共産党武漢根拠地"
- PRC_communism_DEF: "共産党武漢根拠地"
+ PRC_communism: "中国共産党"
+ PRC_communism_DEF: "中国共産党"
  PRC_fascism_ADJ: "中国"
  PRC_democratic_ADJ: "中国"
  PRC_neutrality_ADJ: "中国"
@@ -6408,17 +6408,17 @@
  BKN_fascism_DEF: "武漢人民国"
  BKN_democratic: "武漢共和国"
  BKN_democratic_DEF: "武漢共和国"
- BKN_neutrality: "湖北"
- BKN_neutrality_DEF: "湖北"
- BKN_communism: "湖北社会主義共和国"
- BKN_communism_DEF: "湖北社会主義共和国"
- BKN_fascism_ADJ: "湖北"
- BKN_democratic_ADJ: "湖北"
- BKN_neutrality_ADJ: "湖北"
- BKN_communism_ADJ: "湖北"
- BKN: "湖北"
- BKN_DEF: "湖北"
- BKN_ADJ: "湖北"
+ BKN_neutrality: "蜜金愚陀無"
+ BKN_neutrality_DEF: "蜜金愚陀無"
+ BKN_communism: "武漢社会主義共和国"
+ BKN_communism_DEF: "武漢社会主義共和国"
+ BKN_fascism_ADJ: "武漢"
+ BKN_democratic_ADJ: "武漢"
+ BKN_neutrality_ADJ: "武漢"
+ BKN_communism_ADJ: "武漢"
+ BKN: "武漢"
+ BKN_DEF: "武漢"
+ BKN_ADJ: "武漢"
 
  SAN_fascism: "山東帝国"
  SAN_fascism_DEF: "山東帝国"
