ベネズエライベント完成

--- a/localisation/TR_events/japanese/TR_FRA_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_FRA_l_japanese.yml
@@ -40,16 +40,24 @@ TR_FRA_SPsibaku.8: "失敗..."  #アナキスト失敗
 TR_FRA_SPsibaku.8.t: "失敗..."
 TR_FRA_SPsibaku.8.d: "アナキストどもは我々の寛大な要求を拒否した！"
 TR_FRA_SPsibaku.8.a: "奴らを攻撃しなければならない！"
-TR_FRA_SPsibaku.8.a: "ここが引き際かもしれない..."
+TR_FRA_SPsibaku.8.b: "ここが引き際かもしれない..."
 
 TR_FRA_SPsibaku.9: "失敗..." #カタルーニャ失敗
 TR_FRA_SPsibaku.9.t: "失敗..."
 TR_FRA_SPsibaku.9.d: "カタルーニャの自治政府どもは我々の寛大な要求を拒否した！"
 TR_FRA_SPsibaku.9.a: "奴らを攻撃しなければならない！"
-TR_FRA_SPsibaku.9.a: "ここが引き際かもしれない..."
+TR_FRA_SPsibaku.9.b: "ここが引き際かもしれない..."
 
 
-TR_FRA.1.t: "失敗..."
-TR_FRA.1.d: "カタルーニャの自治政府どもは我々の寛大な要求を拒否した！"
-TR_FRA.1.a: "奴らを攻撃しなければならない！"
-TR_FRA.1.a: "ここが引き際かもしれない..."
+TR_FRA.1.t: "フランスが石油掘削を提案"
+TR_FRA.1.d: "フランスが石油掘削を提案してきた、掘削技術がない我々にとっては大きな利益をえられるかもしれない"
+TR_FRA.1.a: "この提案を受け入れよう"
+TR_FRA.1.b: "アカに手を貸すなど有り得ない！"
+
+TR_FRA.2.t: "ベネズエラが提案を受諾"
+TR_FRA.2.d: "ベネズエラ政府は我々の提案を受諾した！"
+TR_FRA.2.a: "素晴らしい！"
+
+TR_FRA.3.t: "ベネズエラが提案を拒否"
+TR_FRA.3.d: "ベネズエラ政府は我々の提案を拒否した！"
+TR_FRA.3.a: "残念だ"
