--- a/localisation/TR_ideas/japanese/TR_FRA_POL_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_FRA_POL_ideas_l_japanese.yml
@@ -44,3 +44,6 @@ TR_FRA_artillery: "戦場の女神"
 TR_FRA_midi: "ミディ運河の近代化"
 TR_inetr_supSPC: "スペインへの支援"
 TR_FRA_pay: "ベネズエラへの支払い"
+
+#poland
+TR_POL_support_to_poland: "ポーランドへの支援"
