--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -77,6 +77,7 @@
  VICTORY_POINTS_1121: "淮安"
  VICTORY_POINTS_1029: "連雲港"
  VICTORY_POINTS_11931: "洛陽"
+ VICTORY_POINTS_10364: "天頂山"
  VICTORY_POINTS_10474: "襄陽"
  VICTORY_POINTS_4295: "漢中"
  VICTORY_POINTS_10733: "宝鶏"
