パトリシアちゃん

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -5,6 +5,7 @@
  RUS_alexei_nikolaevich: "アレクセイ・ニコラエヴィチ"
  RUS_kirill_vladimirovich: "キリル・ウラジーミロヴィチ"
  RUS_notsar: "空位"
+ RUS_Joseph_Stalin: "ヨシフ・ジュガシヴィリ"
 
  SRI_dAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
