--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -60,14 +60,15 @@
  RUS_anti_commune_pact_desc:"この国はロシアを中心とする§R防共協定§!に加盟している。"
  RUS_antipact.tt:"§R社会主義§!より左派への外交の寛容: §R-40§!\n§R社会主義§!より左派の日毎の支持率: §R-0.02§!"
 
- RUS_church_law:"教会法"
- RUS_church_law_desc:"教会の権限を大幅に広げることが明記された法律である。この法律によって、正教会は政治機関の一つとなった。"
- RUS_holy_war:"聖戦"
- RUS_holy_war_desc:"この戦争が教会と神のための聖戦であり十字軍であることは歴史が証明するだろう。と総主教は語っている。神のために我々は戦い抜かなければならない！"
- RUS_op_air:"作戦空軍"
- RUS_op_air_desc:"この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
- RUS_op_air_1:"作戦空軍"
- RUS_op_air_1_desc:"この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
- RUS_op_air_2:"作戦空軍"
- RUS_op_air_2_desc:"この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
- RUS_cc:"ロシア空母艦隊"
+ RUS_church_law: "教会法"
+ RUS_church_law_desc: "教会の権限を大幅に広げることが明記された法律である。この法律によって、正教会は政治機関の一つとなった。"
+ RUS_holy_war: "聖戦"
+ RUS_holy_war_desc: "この戦争が教会と神のための聖戦であり十字軍であることは歴史が証明するだろう。と総主教は語っている。神のために我々は戦い抜かなければならない！"
+ RUS_op_air: "作戦空軍"
+ RUS_op_air_desc: "この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
+ RUS_op_air_1: "作戦空軍"
+ RUS_op_air_1_desc: "この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
+ RUS_op_air_2: "作戦空軍"
+ RUS_op_air_2_desc: "この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
+ RUS_cc: "ロシア空母艦隊"
+ Joseph_Stalin: "ヨシフ・ジュガシヴィリ"
