--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -7,8 +7,8 @@
  RUS_winner_of_wwi_2_desc: "大戦争では、ロシアの軍隊は革命を起こしたドイツ相手に勇敢に戦い、栄光ある勝利を掴んだ。皇帝の権威は国内外を問わず響き渡り、今日の帝国の土台となっている。"
  RUS_wwi_army: "大戦争の軍隊"
  RUS_wwi_army_desc: "ロシア帝国軍は先の大戦争の遺産を大きく抱えている。近代化の途上で発生した戦争による勝利体験は、陸軍による無駄な突撃戦術を長く維持させることになってしまった。"
- RUS_nomad_of_russia: "遊牧民"
- RUS_nomad_of_russia_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_nomad_of_russia: "杜撰な戸籍制度"
+ RUS_nomad_of_russia_desc: "我が国の戸籍制度は古くから放置されている。その結果、他国のような効率的な徴兵も、犯罪者の追跡もままならない。一度大規模な調査と改革を行わなければ近代化は進まないだろう。"
 
  RUS_agricultural_economy: "農業経済"
  RUS_agricultural_economy_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
