--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -284,7 +284,7 @@
  STATE_283:0 "甘粛"
  STATE_284:0 "北島"
  STATE_285:0 "ニューサウスウェールズ"
- STATE_286:0 "ホーチミン"
+ STATE_286:0 "サイゴン"
  STATE_287:0 "タクラマカン"
  STATE_288:0 "ビルマ"
  STATE_289:0 "シャム"
