ベトナムの大北伐ツリー

--- a/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
@@ -48,7 +48,7 @@ VIN_CHI_RAJ: "インドの開放"
 #他
 VIN_CHI_FJN: "南京国民政府を打倒"
 VIN_CHI5: "長江流域での支配権確率"
-VIN_CHI_uSA: "米帝を討伐"
+VIN_CHI_USA: "米帝を討伐"
 
 #フランス
 VIN_FRA1: "フランスとの交渉"
