--- a/localisation/japanese/TR_victory_points_l_japanese.yml
+++ b/localisation/japanese/TR_victory_points_l_japanese.yml
@@ -84,10 +84,10 @@
  VICTORY_POINTS_1933: "天水"
  VICTORY_POINTS_1200: "煙台"
  VICTORY_POINTS_4190: "石家荘"
- VICTORY_POINTS_1169: "甘鄲"
+ VICTORY_POINTS_1169: "邯鄲"
  VICTORY_POINTS_3900: "秦皇島"
  VICTORY_POINTS_900: "唐山"
- VICTORY_POINTS_7108: "深釧"
+ VICTORY_POINTS_7108: "深圳"
 
 
 
