--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -37,3 +37,5 @@
  GER_karl_liebknecht: "カール・リープクネヒト"
  MAN_Zhang_Zuolin: "張作霖"
  MAN_Zhang_Xueliang: "張学良"
+ 
+ USA_Henry_Louis_Mencken: "ヘンリー・ルイス・メンケン"
