--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6317,6 +6317,8 @@
  NAB_ADJ: "∇"
  USA_anarchism: "アメリカ無政府主義評議会"
  USA_anarchism_DEF: "アメリカ無政府主義評議会"
+ USA_libertarianism: "北アメリカ自由領域"
+ USA_libertarianism_DEF: "北アメリカ自由領域"
  USA_syndicalism: "アメリカ労働組合連邦"
  USA_syndicalism_DEF: "アメリカ労働組合連邦"
  USA_communism: "アメリカ共産主義諸州連邦"
