--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -87,9 +87,9 @@
  ENG_imperial_federation_unified_conservatism: "帝國聯邦"
  ENG_imperial_federation_unified_conservatism_ADJ: "帝國"
  ENG_imperial_federation_unified_conservatism_DEF: "帝國聯邦"
- ENG_imperial_federation_unified_neytrality: "帝国連邦"
- ENG_imperial_federation_unified_neytrality: "帝国"
- ENG_imperial_federation_unified_neytrality_DEF: "帝国連邦"
+ ENG_imperial_federation_unified_neutrality: "帝国連邦"
+ ENG_imperial_federation_unified_neutrality: "帝国"
+ ENG_imperial_federation_unified_neutrality_DEF: "帝国連邦"
  ENG_imperial_federation_unified_theocracy: "神聖ブリタニア帝國"
  ENG_imperial_federation_unified_theocracy_ADJ: "ブリタニア"
  ENG_imperial_federation_unified_theocracy_DEF: "神聖ブリタニア帝國"
@@ -123,24 +123,48 @@
  MDR_autonomy_cleansing_area: "パンノニア浄化区域"
  MDR_autonomy_cleansing_area_DEF: "パンノニア浄化区域"
 
-CZE_conservatism_democratic: "チェコ共和国"
-CZE_communism_government: "チェコ革命戦線"
-CZE_communism: "チェコ社会主義共和国"
-
-CZESLO: "チェコスロバキア国"
-CZESLO_DEF: "チェコスロバキア国"
-CZEZPL: "ザパドスラヴィア"
-CZEZPL_DEF: "ザパドスラヴィア"
-HROM: "神聖ローマニア軍団国"
-HROM_DEF: "神聖ローマニア軍団国"
-
-HBUL: "モエシア＝トラキア文化再生地域"
-HBUL_DEF: "モエシア＝トラキア文化再生地域" 
-
-NKCHI: "南京国民政府"
-NKCHI_DEF: "南京国民政府"
-
-GER_Schwarze_Front: "黒色戦線"
-GER_Schwarze_FrontL_DEF: "黒色戦線"
+ CZE_conservatism_democratic: "チェコ共和国"
+ CZE_communism_government: "チェコ革命戦線"
+ CZE_communism: "チェコ社会主義共和国"
+ 
+ CZESLO: "チェコスロバキア国"
+ CZESLO_DEF: "チェコスロバキア国"
+ CZEZPL: "ザパドスラヴィア"
+ CZEZPL_DEF: "ザパドスラヴィア"
+ HROM: "神聖ローマニア軍団国"
+ HROM_DEF: "神聖ローマニア軍団国"
+ 
+ HBUL: "モエシア＝トラキア文化再生地域"
+ HBUL_DEF: "モエシア＝トラキア文化再生地域" 
+ 
+ NKCHI: "南京国民政府"
+ NKCHI_DEF: "南京国民政府"
+ 
+ GER_Schwarze_Front: "黒色戦線"
+ GER_Schwarze_FrontL_DEF: "黒色戦線"
 
  
+ # 国家形成
+ WEST_SLAV: "西スラブ"
+ WEST_SLAV_DEF: "西スラブ"
+ WEST_SLAV_ADJ: "西スラブ"
+ WEST_SLAV_anarchism: "西スラブ地域防衛評議会"
+ WEST_SLAV_anarchism_DEF: "西スラブ地域防衛評議会"
+ WEST_SLAV_syndicalism: "西スラブ労働組合連盟"
+ WEST_SLAV_syndicalism_DEF: "西スラブ労働組合連盟"
+ WEST_SLAV_communism: "西スラブ社会主義共和国連邦"
+ WEST_SLAV_communism_DEF: "西スラブ社会主義共和国連邦"
+ WEST_SLAV_socialism: "西スラブ人民共和国"
+ WEST_SLAV_socialism_DEF: "西スラブ人民共和国"
+ WEST_SLAV_socialdemocratic: "西スラブ共和国"
+ WEST_SLAV_socialdemocratic_DEF: "西スラブ共和国"
+ WEST_SLAV_democratic: "西スラブ連邦"
+ WEST_SLAV_democratic_DEF: "西スラブ連邦"
+ WEST_SLAV_conservatism: "西スラブ国"
+ WEST_SLAV_conservatism_DEF: "西スラブ国"
+ WEST_SLAV_neutrality: "西スラブ連合王国"
+ WEST_SLAV_neutrality_DEF: "西スラブ連合王国"
+ WEST_SLAV_theocracy: "西スラブ教会"
+ WEST_SLAV_theocracy_DEF: "西スラブ教会"
+ WEST_SLAV_fascism: "西スラブ帝国"
+ WEST_SLAV_fascism_DEF: "西スラブ帝国"
