ホーチミン！ホーチミン！ホーチミン！ホーチミン！ホーチミン！

--- a/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_VIN_l_japanese.yml
@@ -1,7 +1,7 @@
 ﻿l_japanese:
 VIN_1: "第一次四ヵ年計画の報告書"
 VINv_1: "未実装！！"
-VINv_1_desc: "そのうち実装されるよそう、たぶん、きっと..."
+VINv_1_desc: "そのうち実装されるよ、そう、たぶん、きっと..."
 #左産業
 VIN_CHI_ind1: "経済開発"
 VIN_CHI_ind2: "工業化の進捗"
@@ -59,46 +59,52 @@ VIN_FRA5: "南部のゴム農園の権利"
 VIN_FRA6: "交渉の結果..."
 
 #海軍
-VIN_navy1: "a"
-VIN_navy2: "a"
-VIN_navy3: "a"
-VIN_navy4: "a"
-VIN_navy5: "a"
-VIN_navy6: "a"
-VIN_navy7: "a"
-VIN_navy8: "a"
-VIN_navy9: "a"
-VIN_navy10: "a"
-VIN_navy11: "a"
-VIN_navy12: "a"
+VIN_navy1: "ベトナム海軍"
+VIN_navy2: "大型艦重視"
+VIN_navy3: "小型艦開発"
+VIN_navy4: "大型艦開発"
+VIN_navy5: "戦艦建造"
+VIN_navy6: "マラッカでの通商破壊を重視"
+VIN_navy7: "新型潜水艦"
+VIN_navy8: "水上艦"
+VIN_navy9: "潜水艦の増産"
+VIN_navy10: "造船所の拡張"
+VIN_navy11: "ドクトリンの発展"
+VIN_navy12: "ドクトリンの発展Ⅱ"
+
+TR_VIN_nav_haiphong: "1936年型駆逐艦船体派生型の§Yハイフォン級§!駆逐艦が生産ラインに50%完成した状態でに§Y4§!隻追加される。"
+TR_VIN_nav_saigon: "1936年型大型艦船体派生型の§Yサイゴン級§!戦艦と§Yフエ級§!戦艦が生産ラインに65%完成した状態でに追加される。"
 
 #陸軍
-VIN_CHI_army1: "a"
-VIN_CHI_army2: "a"
-VIN_CHI_army3: "a"
-VIN_CHI_army4: "a"
-VIN_CHI_army5: "a"
-VIN_CHI_army6: "a"
-VIN_CHI_army7: "a"
-VIN_CHI_army8: "a"
-VIN_CHI_army9: "a"
-VIN_CHI_army10: "a"
+VIN_CHI_army1: "ベトナム陸軍"
+VIN_CHI_army2: "ベトナムのゲリラ戦"
+VIN_CHI_army3: "密林戦闘"
+VIN_CHI_army4: "攻撃重視"
+VIN_CHI_army5: "防衛重視"
+VIN_CHI_army6: "主力兵器の開発"
+VIN_CHI_army7: "主力兵器の開発Ⅱ"
+VIN_CHI_army8: "秘密兵器"
+VIN_CHI_army9: "新型装備"
+VIN_CHI_army10: "歩兵装備の改良"
 #空軍
-VIN_CHI_a1: "a"
-VIN_CHI_a2: "a"
-VIN_CHI_a3: "a"
-VIN_CHI_a4: "a"
-VIN_CHI_a5: "a"
-VIN_CHI_a5: "a"
+VIN_CHI_a1: "ベトナム空軍"
+VIN_CHI_a2: "戦闘機の追加調達"
+VIN_CHI_a3: "爆撃機の追加調達"
+VIN_CHI_a4: "戦術を学ぶ"
+VIN_CHI_a5: "爆撃機開発"
+VIN_CHI_a6: "北米爆撃"
+VIN_sair: "イタリアの§YG.50§!戦闘機が備蓄に§Y80§!機追加される。"
+VIN_mair: "イタリアの§YSM.81§!戦闘機が備蓄に§Y40§!機追加される。"
+
 #陸軍後半
-VIN_CHI_army11: "a"
-VIN_CHI_army12: "a"
-VIN_CHI_army13: "a"
-VIN_CHI_army14: "a"
-VIN_CHI_army15: "a"
-VIN_CHI_army16: "a"
-VIN_CHI_army17: "a"
-VIN_CHI_army18: "a"
-VIN_CHI_army19: "a"
-VIN_CHI_army20: "a"
-VIN_CHI_army21: "a"
+VIN_CHI_army11: "全てに備えよ！"
+VIN_CHI_army12: "ハノイ士官学校"
+VIN_CHI_army13: "士官学校の発展"
+VIN_CHI_army14: "インドシナ国家の防衛"
+VIN_CHI_army15: "ゲリラ戦闘を強化"
+VIN_CHI_army16: "ドクトリンの強化"
+VIN_CHI_army17: "要塞化"
+VIN_CHI_army18: "外に打って出る"
+VIN_CHI_army19: "対外戦闘への改良"
+VIN_CHI_army20: "火力の補強"
+VIN_CHI_army21: "ドクトリンの強化"
