--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -168,3 +168,26 @@
  WEST_SLAV_theocracy_DEF: "西スラブ教会"
  WEST_SLAV_fascism: "西スラブ帝国"
  WEST_SLAV_fascism_DEF: "西スラブ帝国"
+ SOUTH_SLAV: "南スラブ"
+ SOUTH_SLAV_DEF: "南スラブ"
+ SOUTH_SLAV_ADJ: "南スラブ"
+ SOUTH_SLAV_anarchism: "南スラブ地域防衛評議会"
+ SOUTH_SLAV_anarchism_DEF: "南スラブ地域防衛評議会"
+ SOUTH_SLAV_syndicalism: "南スラブ労働組合連盟"
+ SOUTH_SLAV_syndicalism_DEF: "南スラブ労働組合連盟"
+ SOUTH_SLAV_communism: "南スラブ社会主義共和国連邦"
+ SOUTH_SLAV_communism_DEF: "南スラブ社会主義共和国連邦"
+ SOUTH_SLAV_socialism: "南スラブ人民共和国"
+ SOUTH_SLAV_socialism_DEF: "南スラブ人民共和国"
+ SOUTH_SLAV_socialdemocratic: "南スラブ共和国"
+ SOUTH_SLAV_socialdemocratic_DEF: "南スラブ共和国"
+ SOUTH_SLAV_democratic: "南スラブ連邦"
+ SOUTH_SLAV_democratic_DEF: "南スラブ連邦"
+ SOUTH_SLAV_conservatism: "南スラブ国"
+ SOUTH_SLAV_conservatism_DEF: "南スラブ国"
+ SOUTH_SLAV_neutrality: "南スラブ連合王国"
+ SOUTH_SLAV_neutrality_DEF: "南スラブ連合王国"
+ SOUTH_SLAV_theocracy: "南スラブ教会"
+ SOUTH_SLAV_theocracy_DEF: "南スラブ教会"
+ SOUTH_SLAV_fascism: "南スラブ帝国"
+ SOUTH_SLAV_fascism_DEF: "南スラブ帝国"
