ベトナム調整完了

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -39,3 +39,15 @@
  MAN_Zhang_Xueliang: "張学良"
  
  USA_Henry_Louis_Mencken: "ヘンリー・ルイス・メンケン"
+
+ Ho_Chi_Minh: "ホー・チ・ミン" #VIN
+ Vo_Nguyen_Giap: "ヴォー・グエン・ザップ"
+ Van_Tien_Dung: "ヴァン・チエン・ズン"
+ wang_jingwei: "汪兆銘"
+
+ VIN_nguyen_van_hinh: "グエン・バン・ヒン"
+ VIN_duong_van_minh: "ズオン・バン・ミン"
+ VIN_le_van_ty: "ル・ヴァン・ティ"
+ VIN_tran_quang_vinh: "チャン・クアン・ビン"
+ VIN_le_quang_my: "ル・クアン・ミー"
+ VIN_tran_van_chon: "トラン・ヴァン・チョン"
