--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -139,6 +139,9 @@
  
  NKCHI: "南京国民政府"
  NKCHI_DEF: "南京国民政府"
+
+ CVIN: "大越人民共和国"
+ CVIN_DEF: "大越人民共和国"
  
  GER_Schwarze_Front: "黒色戦線"
  GER_Schwarze_FrontL_DEF: "黒色戦線"
