--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -1112,6 +1112,8 @@
  SIK: "新疆"
  SIK_DEF: "新疆"
  SIK_ADJ: "新疆"
+ SIK_VIN_communism_subject: "東トルキスタン人民共和国"
+ SIK_VIN_communism_subject_DEF: "東トルキスタン人民共和国"
  SIK_RUS_neutrality_subject: "東トルキスタン総督府"
  SIK_RUS_neutrality_subject_DEF: "東トルキスタン総督府"
  TAN_fascism: "トゥヴァ民族共和国"
@@ -1141,6 +1143,8 @@
  TIB_democratic_ADJ: "チベット"
  TIB_neutrality_ADJ: "チベット"
  TIB_communism_ADJ: "チベット"
+ TIB_VIN_communism_subject: "チベット人民共和国"
+ TIB_VIN_communism_subject_DEF: "チベット人民共和国"
  TIB: "チベット"
  TIB_DEF: "チベット"
  TIB_ADJ: "チベット"
