日本NFローカライズ追加

--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -1,78 +1,78 @@
 ﻿l_japanese:
 jap_19th_General_Election:"第１９回衆議院選挙"
-jap_19th_General_Election_desc:"内閣総理大臣は衆議院の解散を決定した"
+jap_19th_General_Election_desc:"犬養毅内閣総理大臣は任期満了を前に衆議院の解散を決定した。これより、各政党は選挙活動に邁進し、帝国をより偉大な国へと発展させる道しるべを示していく。臣民はそれを注意深く見ている。"
 
 jap_Constitutional_Democratic_Party:"立憲民政党"
-jap_Constitutional_Democratic_Party_desc:""
+jap_Constitutional_Democratic_Party_desc:"立憲民政党が立憲政友会続投の予想に反して第一党として躍進し、憲政の常道の下濱口雄幸が内閣総理大臣に就任した。これより、立憲政友会の下で改革が行われるだろう。"
 jap_Inoue:"井上財政"
-jap_Inoue_desc:""
+jap_Inoue_desc:"井上準之助大蔵大臣は一次大戦以降中止されていた金輸出の解禁を行い、緊縮財政に踏み切ることで悪化する財政を再建する必要があると考えている。一時的には不況に陥るかもしれないが、必要な犠牲であろう。"
 jap_Liquidation_of_unprofitable_companies:"不採算企業の整理"
-jap_Liquidation_of_unprofitable_companies_desc:""
+jap_Liquidation_of_unprofitable_companies_desc:"好景気に胡坐をかき非効率的な企業が数多く存在していた。しかし、緊縮財政に踏み切った帝国でそのような企業は生き残ることはできない。我が国に必要なのはいかなる経済状況に耐えうる強靭な企業である。"
 jap_Improving_corporate_efficiency:"企業の効率化"
-jap_Improving_corporate_efficiency_desc:""
+jap_Improving_corporate_efficiency_desc:"デフレ下において生き残りをかけて多くの中小企業が効率化を進めている。デフレも先が見えつつあり、これらの成果が見れる日も近いだろう。"
 jap_Long_live_liberalism:"自由主義万歳"
-jap_Long_live_liberalism_desc:""
+jap_Long_live_liberalism_desc:"我が国は自由主義を謳歌し、経済発展を遂げている。自由な企業間の競争はイノベーションを生み好循環へとつながる。もはや我が帝国を軍事だけの国家と呼ぶものはいないだろう。"
 jap_education:"教育改革"
-jap_education_desc:""
+jap_education_desc:"我が国の教育制度は複雑でこれでは学生の能力を最大限発揮できる環境を作ることができない。今こそメスを入れ、将来を担う臣民の教育を抜本から見直す時だ。"
 jap_State_Control_of_Electricity:"電力の国家統制"
-jap_State_Control_of_Electricity_desc:""
+jap_State_Control_of_Electricity_desc:"電力は国家の経済発展において切っても切り離せないものであるが、発電所をすぐに立てることは困難である。十分な発電設備が整うまで、国家の管理下に置くのが最善であろう。"
 jap_administrative_reform:"行政改革"
-jap_administrative_reform_desc:""
+jap_administrative_reform_desc:"我が国の行政組織には無駄が数多く存在している。縦割り行政の弊害も見え始めるなか、行政改革を行う必要が出始めているのかもしてない。"
 jap_Convention_Center_Definition:"議会中心主義"
-jap_Convention_Center_Definition_desc:""
+jap_Convention_Center_Definition_desc:"帝国議会は憲法上は天皇陛下の協賛機関に過ぎないが、実質的には帝国の政治を決定する国家の脳である。我々はそのことに誇りを持ち、これからも帝国に奉仕していくだろう。"
 jap_Continuation_of_Shidehara_foreign_policy:"幣原外交を継続"
-jap_Continuation_of_Shidehara_foreign_policy_desc:""
+jap_Continuation_of_Shidehara_foreign_policy_desc:"幣原前外相の進めた協調外交路線を引き続き進めていくべきだ。現外務大臣である出淵勝次は特に奉天政府との融和外交を主張している。"
 jap_constitutional_amendment:"憲法改正"
-jap_constitutional_amendment_desc:""
+jap_constitutional_amendment_desc:"不磨の大典とも呼ばれる明治憲法を一部修正し、内閣を天皇の信任の下政治を行う組織、内閣総理大臣を内閣の長であり閣僚の任命権を持つと明文化することで、明治憲法の精神はそのままに、民本主義を維持できるようになるだろう。"
 
 jap_Rikken_Seiyukai:"立憲政友会"
-jap_Rikken_Seiyukai_desc:""
+jap_Rikken_Seiyukai_desc:"ここ数年与党として政権を担ってきた立憲政友会が予想通り選挙に勝利した。高橋財政の下日本経済を成長させ、特に不祥事もなかった政権運営の順当な結果であろう。これからも引き続き安定した政権運営が期待されている。"
 jap_Continuation_of_Takahashi_Financing:"高橋財政の継続"
-jap_Continuation_of_Takahashi_Financing_desc:""
+jap_Continuation_of_Takahashi_Financing_desc:"インフレが進んでいることは事実であるがいまだ、想定の範囲内であり積極財政を続ける余裕はあるだろう。"
 jap_Keynesian_Studies_in_Practice:"ケインズ学の実践"
-jap_Keynesian_Studies_in_Practice_desc:""
+jap_Keynesian_Studies_in_Practice_desc:"農村部ではいまだに貧しい生活を強いられている臣民は数多く存在しており、彼らを救うためにも職を用意してやらなければならない。"
 jap_Controlling_inflation:"インフレを抑える"
-jap_Controlling_inflation_desc:""
+jap_Controlling_inflation_desc:"これ以上の積極財政はハイパーインフレに繋がる恐れがあり、一時的に緊縮財政へと振れることも許容しなければならない。"
 jap_Growth_based_on_Keynesian_studies:"ケインズ学に基づく成長を"
-jap_Growth_based_on_Keynesian_studies_desc:""
+jap_Growth_based_on_Keynesian_studies_desc:"国家を発展させるのは国家による大規模な公共事業への投資であり、国家資本主義である。我が国は積極財政を展開することでこれからの更なる経済成長へとつなげていく。"
 jap_decentralization_of_power:"地方分権"
-jap_decentralization_of_power_desc:""
+jap_decentralization_of_power_desc:"現在、経済発展とともにストロー現象と呼ばれる各地方都市への住民の流入が加速している。地方分権を進め地方自治体の能力を高めることでこれらの問題が解決されるだろう。
 jap_extensive_transportation_network:"交通網の充実"
-jap_extensive_transportation_network_desc:""
+jap_extensive_transportation_network_desc:"鉄道省が企画した弾丸列車構想はこれからの日本経済に必要不可欠なものだ。弾丸列車を開通させ、日本経済の更なる発展のためにが一刻の猶予も残されていない。"
 jap_policy_of_imperialisation:"皇民化政策"
-jap_policy_of_imperialisation_desc:""
+jap_policy_of_imperialisation_desc:"外地の産業振興と、日本語教育を推進し、大日本帝国に住む「臣民」としての自覚を持たせるための政策が必要だ。"
 jap_Royal_Center_Definition:"皇室中心主義"
-jap_Royal_Center_Definition_desc:""
+jap_Royal_Center_Definition_desc:"いついかなる時も日本には天皇が存在し、国家の最高権力者であったことは疑いようのない事実だ。憲法にもあるように天皇こそが国家の中枢なのである。"
 jap_Developing_Mori_Diplomacy:"森外交を展開"
-jap_Developing_Mori_Diplomacy_desc:""
+jap_Developing_Mori_Diplomacy_desc:"現外務大臣の森格は今までの幣原外交を軟弱と一蹴し、帝国に見合う国際地位を手に入れるための帝国主義外交を推し進めるべきだと狩猟している。"
 jap_Protect_the_Constitution:"憲法を守れ"
-jap_Protect_the_Constitution_desc:""
+jap_Protect_the_Constitution_desc:"明治憲法は欽定憲法であり天皇陛下から発せられたものである。それを我々が改変することなど許されるはずがない。"
 
 jap_Shakai_Taishuto:"社会大衆党"
-jap_Shakai_Taishuto_desc:""
+jap_Shakai_Taishuto_desc:"多くの政治評論家の予測を覆して第一党に躍り出たのは立憲政友会でも立憲民政党でもない社会大衆党だ。社会民主主義を唱え格差の是正を第一とする彼らの政治に多くの臣民は期待を寄せている。"
 jap_socialist_economy:"社会主義経済"
-jap_socialist_economy_desc:""
+jap_socialist_economy_desc:"計画経済に向けた第一歩として、増税を行い、国家の使用できる円の量を増やすことでこれからの国家事業への準備を行えるだろう。"
 jap_planned_economy:"計画経済"
-jap_planned_economy_desc:""
+jap_planned_economy_desc:"計画経済を導入し、一年ごとに目標を定めることで、その分野に特化した予算案を計画することができ、より効率的に国家を発展させることができる。"
 jap_wealth_redistribution:"富の分配"
-jap_wealth_redistribution_desc:""
+jap_wealth_redistribution_desc:"日本は格差社会であり、貧困層と富裕層の間で分断が生じ始めている。ここは政府が介入し、先手を打って問題を解決してしまうことで日本の文壇を防げるだろう。"
 jap_Building_Japanese-style_Socialism:"日本型社会主義の構築"
-jap_Building_Japanese-style_Socialism_desc:""
+jap_Building_Japanese-style_Socialism_desc:"もはや格差社会ではない。一億総中流の意識を持つようになった国民はこの世界のどこよりを平等なこの日本に誇りを持っている。"
 jap_dismantling_of_the_Ministry_of_Home_Affairs:"内務省解体"
-jap_dismantling_of_the_Ministry_of_Home_Affairs_desc:""
+jap_dismantling_of_the_Ministry_of_Home_Affairs_desc:"内務省は管轄する業務が広範にわたり権力が集中してしまっている。いくつかの省庁に分け、全体のバランスを保つべきだ。"
 jap_Development_of_insurance_system:"保険制度の整備"
-jap_Development_of_insurance_system_desc:""
+jap_Development_of_insurance_system_desc:"国民皆保険、国民皆年金を整備し、いかなる弱者も見捨てない制度を作ることは国家に課せられた最低限の職務であり果たすべき義務である。"
 jap_Establishment_of_the_Ministry_of_Labor:"労働省の設置"
-jap_Establishment_of_the_Ministry_of_Labor_desc:""
+jap_Establishment_of_the_Ministry_of_Labor_desc:"我が国では労働者の立場が依然として弱く、資本家から搾取されている。国家がそのような状況を防ぐために専用の省を立ち上げることは国益にかなうだろう。"
 jap_social_democracy:"社会民主主義"
-jap_social_democracy_desc:""
+jap_social_democracy_desc:"穏健な社会民主主義を推進することで、分断の生まない平等な社会を実現することができるだろう。"
 jap_Cooperation_with_Socialist_Countries:"社会主義国との連携"
-jap_Cooperation_with_Socialist_Countries_desc:""
+jap_Cooperation_with_Socialist_Countries_desc:"社会主義国と我が国には共通点がいくつかある。彼らとの連携は将来的な同盟も含めて今のうちから接触を図ることは悪くないだろう。"
 jap_revise_the_constitution:"憲法を変えろ"
-jap_revise_the_constitution_desc:""
+jap_revise_the_constitution_desc:"天皇主権は現在の日本にはあっていない。天皇はあくまで日本の象徴であり、日本の主役は我々労働者であり国民だ。そのことを明記する必要があるだろう。"
 
 jap_NAVY_1_1:"第三次建造計画"
-jap_NAVY_1_1_desc:""
+jap_NAVY_1_1_desc:"第三次建造計画は現在海軍内で検討中の新たなる艦船の建造計画のことであり、いずれ、結論が出るだろう。"
 jap_NAVY_1_2_desc:""
 jap_NAVY_1_2:"第三次建造計画の始動"
 jap_NAVY_1_3:"第四次建造計画に向けて"
